welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:4: error: Unit does not take parameters
  Motif()
       ^PatternPicture:53: error: Unit does not take parameters
  Motif()
       ^